--- a/Counter/index.html
+++ b/Counter/index.html
@@ -15,12 +15,12 @@
         </header>
         <h1 id="number">0</h1>
         <div class="buttons">
-            <button class="btn" id = "decrease">Decrease</button>
-            <button class="btn" id = "reset"> Reset</button>
-            <button class="btn" id = "increase">Increase</button>
+            <button id="decrease">Decrease</button>
+            <button id="reset"> Reset</button>
+            <button id="increase">Increase</button>
         </div>
 
     </div>
 </body>
-<script src="/Counter/app2.js"></script>
+<script src="/Counter/app.js"></script>
 </html>
